--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/flat-ui.css'>
 </head>
-<body class=" photo-cover">
+<body class="photo-cover">
 
   <!--Navbar-->
 <nav class="navbar navbar-expand-lg fixed-top navbar-light">
@@ -56,7 +56,7 @@
       <p>
         I Enjoy building web app's and working with a team of professionals.
       </p>
-      <img src="me.jpg" alt="Abdul Mohiz" class="rounded-circle mx-auto d-block img-fluid size-img"/>
+      <img src="Images/me.jpg" alt="Abdul Mohiz" class="rounded-circle mx-auto d-block img-fluid size-img"/>
     </div>
   </div>
 </div>
@@ -90,7 +90,7 @@
           <div class="panel-heading"><p></p></div>
           <div class="panel-body">
             <a href="https://codepen.io/Mohiz/full/GGeVBR" target="_blank">
-              <img class="img-responsive center-block" src="p.png" />
+              <img class="img-responsive center-block" src="Images/p.png" />
             </a>              </div>
           <div class="panel-footer">
             <h3>Pomodoro Clock</h3>
@@ -104,7 +104,7 @@
           <div class="panel-heading"><p></p></div>
           <div class="panel-body">
             <a href="https://codepen.io/Mohiz/full/qxjMMr" target="_blank">
-              <img class="img-responsive center-block" src="twi.png" />
+              <img class="img-responsive center-block" src="Images/twi.png" />
             </a>
           </div>
           <div class="panel-footer">
@@ -123,7 +123,7 @@
           <div class="panel-heading"><p></p></div>
           <div class="panel-body" id="fixed-width">
             <a href="https://codepen.io/Mohiz/full/mXmPRN" target="_blank">
-              <img class="img-responsive center-block" src="wiki.png" />
+              <img class="img-responsive center-block" src="Images/wiki.png" />
             </a>
           </div>
           <div class="panel-footer">
@@ -138,7 +138,7 @@
           <div class="panel-heading"><p></p></div>
           <div class="panel-body">
             <a href="https://github.com/AbdulMohiz/To-Do-List-JavaScript" target="_blank">
-              <img class="img-responsive center-block" src="toDO.png" />
+              <img class="img-responsive center-block" src="Images/toDO.png" />
             </a>              </div>
           <div class="panel-footer">
             <h3>To Do App</h3>
@@ -152,7 +152,7 @@
           <div class="panel-heading"><p></p></div>
           <div class="panel-body">
             <a href="https://github.com/AbdulMohiz/Clock-JavaScript" target="_blank">
-              <img class="img-responsive center-block" src="clock.png" />
+              <img class="img-responsive center-block" src="Images/clock.png" />
             </a>
           </div>
           <div class="panel-footer">
