--- a/index.html
+++ b/index.html
@@ -180,16 +180,16 @@
     <div class="col-md-4"><h5>Connect With Me</h5>
       <ul class="list-inline">
         <li>
-             <a class="medium" href="https://github.com/AbdulMohiz" target="_blank"><span class="fui-github"></span></a>
+             <a class="medium" href="https://github.com/AbdulMohiz" target="_blank"><span class="fui-github 2x"></span></a>
         </li>
         <li>
-            <a class="medium" href="https://www.linkedin.com/in/abdul-mohiz-200578134/" target="_blank"><span class="fui-linkedin"></span></a>
+            <a class="medium" href="https://www.linkedin.com/in/abdul-mohiz-200578134/" target="_blank"><span class="fui-linkedin 3x"></span></a>
         </li>
         <li>
-            <a class="medium" href="https://twitter.com/mohizi97" target="_blank"><span class="fui-twitter"></span></a></a>
+            <a class="medium" href="https://twitter.com/mohizi97" target="_blank"><span class="fui-twitter 5x"></span></a></a>
         </li>
         <li>
-          <a class="medium" href="https://web.facebook.com/abdulmohiz.mohizi/" target="_blank"><span class="fui-facebook"></span></a></a>
+          <a class="medium" href="https://web.facebook.com/abdulmohiz.mohizi/" target="_blank"><span class="fui-facebook 7x"></span></a></a>
       </li>
       </ul>
     </div>
