--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link href="./style.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flat-ui/2.2.2/css/flat-ui.css'>
 </head>
 <body class="photo-cover">
 
@@ -180,16 +179,16 @@
     <div class="col-md-4"><h5>Connect With Me</h5>
       <ul class="list-inline">
         <li>
-             <a class="medium" href="https://github.com/AbdulMohiz" target="_blank"><span class="fui-github 2x"></span></a>
+             <a class="medium" href="https://github.com/AbdulMohiz" target="_blank"><span class="fa fa-github-square fa-2x"></span></a>
         </li>
         <li>
-            <a class="medium" href="https://www.linkedin.com/in/abdul-mohiz-200578134/" target="_blank"><span class="fui-linkedin 3x"></span></a>
+            <a class="medium" href="https://www.linkedin.com/in/abdul-mohiz-200578134/" target="_blank"><span class="fa fa-linkedin-square fa-2x"></span></a>
         </li>
         <li>
-            <a class="medium" href="https://twitter.com/mohizi97" target="_blank"><span class="fui-twitter 5x"></span></a></a>
+            <a class="medium" href="https://twitter.com/mohizi97" target="_blank"><span class="fa fa-twitter-square fa-2x"></span></a></a>
         </li>
         <li>
-          <a class="medium" href="https://web.facebook.com/abdulmohiz.mohizi/" target="_blank"><span class="fui-facebook 7x"></span></a></a>
+          <a class="medium" href="https://web.facebook.com/abdulmohiz.mohizi/" target="_blank"><span class="fa fa-facebook-square fa-2x"></span></a></a>
       </li>
       </ul>
     </div>
